# majsoul-liqi-json

./: .dockerignore  .gitignore  Dockerfile  README.md  THIRD-PARTY-NOTICES.md  parse.py  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
